--- a/FileExplorer/MainPage.xaml
+++ b/FileExplorer/MainPage.xaml
@@ -56,6 +56,7 @@
                     </CommandBar.Content>
                     <CommandBar.PrimaryCommands>
                         <AppBarButton x:Name="RefreshFolderButton" Icon="Refresh" Label="Refresh" Click="RefreshFolderButton_Click" ToolTipService.ToolTip="Refresh" ToolTipService.Placement="Mouse"/>
+                        <AppBarButton x:Name="ToggleViewButton" Icon="List" Label="Toggle View" Click="ToggleViewButton_Click" ToolTipService.ToolTip="Toggle View" ToolTipService.Placement="Mouse"/>
                     </CommandBar.PrimaryCommands>
                 </CommandBar>
                 <RelativePanel x:Name="FolderViewPanel" RelativePanel.Below="CommandBar" RelativePanel.Above="Footer" RelativePanel.AlignLeftWithPanel="True" RelativePanel.AlignRightWithPanel="True">
@@ -65,11 +66,11 @@
                             <ComboBoxItem x:Name="SortByComboBoxItemName" Content="Name"></ComboBoxItem>
                         </ComboBox>
                     </StackPanel>
-                    <Grid RelativePanel.Below="MainStackPanel" RelativePanel.AlignBottomWithPanel="True" RelativePanel.AlignLeftWithPanel="True" RelativePanel.AlignRightWithPanel="True">
+                    <Grid x:Name="FileItemsListView" Visibility="Collapsed" RelativePanel.Below="MainStackPanel" RelativePanel.AlignBottomWithPanel="True" RelativePanel.AlignLeftWithPanel="True" RelativePanel.AlignRightWithPanel="True">
                         <Grid.ColumnDefinitions>
                             <ColumnDefinition Width="36"/>
                             <ColumnDefinition/>
-                            <ColumnDefinition/>
+                            <ColumnDefinition Width="220"/>
                         </Grid.ColumnDefinitions>
                         <Grid.RowDefinitions>
                             <RowDefinition Height="48"/>
@@ -87,11 +88,11 @@
                             </ListView.ItemContainerStyle>
                             <ListView.ItemTemplate>
                                 <DataTemplate x:DataType="models:FileItem">
-                                    <Grid Tag="{x:Bind StorageItem}">
+                                    <Grid Tag="{x:Bind StorageItem}" ToolTipService.ToolTip="{x:Bind ToolTipText}" ToolTipService.Placement="Mouse">
                                         <Grid.ColumnDefinitions>
                                             <ColumnDefinition Width="36"/>
                                             <ColumnDefinition/>
-                                            <ColumnDefinition/>
+                                            <ColumnDefinition Width="220"/>
                                         </Grid.ColumnDefinitions>
                                         <Grid.Children>
                                             <Button FontFamily="Segoe MDL2 Assets" Content="{x:Bind Icon}" Height="36" Width="36" Background="Transparent" VerticalAlignment="Stretch" Grid.Column="0" IsHitTestVisible="False"/>
@@ -102,6 +103,18 @@
                                 </DataTemplate>
                             </ListView.ItemTemplate>
                         </ListView>
+                    </Grid>
+                    <Grid x:Name="FileItemsGridView" Visibility="Visible" RelativePanel.Below="MainStackPanel" RelativePanel.AlignBottomWithPanel="True" RelativePanel.AlignLeftWithPanel="True" RelativePanel.AlignRightWithPanel="True">
+                        <GridView ItemsSource="{x:Bind FileItems}" SelectionMode="Extended" ItemClick="FileListView_ItemClick" IsItemClickEnabled="True">
+                            <GridView.ItemTemplate>
+                                <DataTemplate x:DataType="models:FileItem">
+                                    <StackPanel Padding="20" ToolTipService.ToolTip="{x:Bind ToolTipText}" ToolTipService.Placement="Mouse">
+                                        <Button FontFamily="Segoe MDL2 Assets" Content="{x:Bind Icon}" FontSize="48" Width="92" Height="64" Background="Transparent" VerticalAlignment="Top" HorizontalAlignment="Stretch" IsHitTestVisible="False"/>
+                                        <TextBlock Text="{x:Bind Name}" TextAlignment="Center" TextWrapping="Wrap" MaxWidth="92" MaxLines="2" VerticalAlignment="Bottom" HorizontalAlignment="Center"/>
+                                    </StackPanel>
+                                </DataTemplate>
+                            </GridView.ItemTemplate>
+                        </GridView>
                     </Grid>
                 </RelativePanel>
                 <RelativePanel x:Name="Footer" RelativePanel.AlignBottomWithPanel="True" RelativePanel.AlignLeftWithPanel="True" RelativePanel.AlignRightWithPanel="True">
