Added converters and thumbnails for images

--- a/FileExplorer/MainPage.xaml
+++ b/FileExplorer/MainPage.xaml
@@ -105,11 +105,17 @@
                         </ListView>
                     </Grid>
                     <Grid x:Name="FileItemsGridView" Visibility="Visible" RelativePanel.Below="MainStackPanel" RelativePanel.AlignBottomWithPanel="True" RelativePanel.AlignLeftWithPanel="True" RelativePanel.AlignRightWithPanel="True">
+                        <Grid.Resources>
+                            <models:VisibleOnNullConverter x:Key="VisibleOnNullConverter"/>
+                            <models:VisibleOnExistsConverter x:Key="VisibleOnExistsConverter"/>
+                            <models:ThumbnailToImageConverter x:Key="ThumbnailToImageConverter"/>
+                        </Grid.Resources>
                         <GridView ItemsSource="{x:Bind FileItems}" SelectionMode="Extended" ItemClick="FileListView_ItemClick" IsItemClickEnabled="True">
                             <GridView.ItemTemplate>
                                 <DataTemplate x:DataType="models:FileItem">
                                     <StackPanel Margin="6" Padding="14" Background="Transparent" ToolTipService.ToolTip="{x:Bind ToolTipText}" ToolTipService.Placement="Mouse">
-                                        <Button FontFamily="Segoe MDL2 Assets" Content="{x:Bind Icon}" FontSize="48" Width="92" Height="64" Background="Transparent" VerticalAlignment="Top" HorizontalAlignment="Stretch" IsHitTestVisible="False"/>
+                                        <Button FontFamily="Segoe MDL2 Assets" Content="{x:Bind Icon}" FontSize="48" Width="92" Height="64" Background="Transparent" VerticalAlignment="Top" HorizontalAlignment="Stretch" IsHitTestVisible="False" Visibility="{Binding Thumbnail, Converter={StaticResource VisibleOnNullConverter}}"/>
+                                        <Image Width="92" Height="64" Visibility="{Binding Thumbnail, Converter={StaticResource VisibleOnExistsConverter}}" Source="{Binding Thumbnail, Converter={StaticResource ThumbnailToImageConverter}}"/>
                                         <TextBlock Text="{x:Bind Name}" TextAlignment="Center" TextWrapping="Wrap" MaxWidth="92" MaxLines="2" VerticalAlignment="Bottom" HorizontalAlignment="Center"/>
                                     </StackPanel>
                                 </DataTemplate>
